--- a/src/components/NavHeader/index.module.css
+++ b/src/components/NavHeader/index.module.css
@@ -1,10 +1,10 @@
 .navBar {
   width: 100%;
   color: #333;
-  background-color: #f6f5f6;
+  background-color: #108EE9;
 }
 
 /* 全局类型 */
 .navBar :global(.am-navbar-title) {
-  color: #333;
+  color: #fff;
 }
