完成：补片明细数据获取

--- a/src/pages/Ordertotal/index.css
+++ b/src/pages/Ordertotal/index.css
@@ -15,9 +15,6 @@
 }
 
 .ordertotal-box {
-  /* position: relative; */
-  /* display:flex; */
-  /* flex-direction: column; */
   width: 100%;
   height: 100%;
 }
@@ -31,5 +28,5 @@
 }
 
 .ordertotal-sticky {
-  background-color: #fff;
+  /* background-color: #fff; */
 }
